# vault-thing

./: Cargo.toml  default.nix
src/: main.rs
test_fixtures/combined/concourse/backend/json/: test.json
test_fixtures/combined/concourse/backend/yaml/: test.yaml
