[package]
name = "vault-thing"
version = "0.1.0"
authors = ["edude03 <edude03@gmail.com>"]

[dependencies]
reqwest = "0.8.6"
walkdir = "2.1.4"
structopt = "0.2"
failure = "0.1.1"
failure_derive = "0.1.1"
url = "1.7.1"
hyper = "0.11"
serde = "1.0"
serde_yaml = "0.7"
serde_derive = "1.0"
serde_json = "1.0"
